// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering results loaded 1`] = `
<div
  className={
    Object {
      "data-css-shdobr": "",
    }
  }
>
  <div
    className="p-a300 css-hlpxua"
    data-request-id="17-000000001"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1jhr6lu": "",
        }
      }
      style={
        Object {
          "backgroundImage": "url(/static/img/311-logo-white-on-grey.svg)",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1jhr6lu": "",
          }
        }
        style={
          Object {
            "backgroundImage": "url()",
          }
        }
      />
    </div>
    <div
      className={
        Object {
          "data-css-n42ldu": "",
        }
      }
    >
      <h4
        className="t--intro t--ellipsis css-1fzcvxa"
      >
        Cosmic Intervention
      </h4>
      <div
        className={
          Object {
            "data-css-3l5swg": "",
          }
        }
      >
        I think that Thanos is here
      </div>
      <div
        style={
          Object {
            "paddingTop": 5,
          }
        }
      >
        <span
          className="t--upper t--sans css-14tkn0p"
        >
          Opened
        </span>
        <span
          className="t--info"
          style={
            Object {
              "fontSize": 14,
            }
          }
        >
          4 minutes ago
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering with request selected 1`] = `
<div
  className={
    Object {
      "data-css-shdobr": "",
    }
  }
>
  <div
    className="p-a300 css-hlpxua"
    data-request-id="17-000000001"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1jhr6lu": "",
        }
      }
      style={
        Object {
          "backgroundImage": "url(/static/img/311-logo-grey-on-white.svg)",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1jhr6lu": "",
          }
        }
        style={
          Object {
            "backgroundImage": "url()",
          }
        }
      />
    </div>
    <div
      className={
        Object {
          "data-css-n42ldu": "",
        }
      }
    >
      <h4
        className="t--intro t--ellipsis css-1fzcvxa"
      >
        Cosmic Intervention
      </h4>
      <div
        className={
          Object {
            "data-css-3l5swg": "",
          }
        }
      >
        I think that Thanos is here
      </div>
      <div
        style={
          Object {
            "paddingTop": 5,
          }
        }
      >
        <span
          className="t--upper t--sans css-14tkn0p"
        >
          Opened
        </span>
        <span
          className="t--info"
          style={
            Object {
              "fontSize": 14,
            }
          }
        >
          4 minutes ago
        </span>
      </div>
    </div>
  </div>
</div>
`;
